# pastebin.run

./: .gitignore  .woodpecker.yml  Cargo.lock.license  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  docker-compose.yml  package-lock.json  package.json  renovate.json  result  shell.nix  vite.config.ts
.reuse/: dep5
.woodpecker/: eslint.yaml  prettier.yaml  reuse.yaml  rustfmt.yaml  test.yaml  vitest.yaml
__tests__/: StandardInput.test.tsx
buildSrc/: build.rs
js/: create-editor.tsx  create-options-link.ts  index.ts  options.ts
js/models/: CodeView.ts  Wrapper.ts  WrapperOptions.ts
js/views/: App.tsx  Editor.tsx  LanguageSelector.tsx  Options.tsx  OptionsEditorType.tsx  Output.tsx  OutputBox.tsx  StandardInput.tsx  WrapperBar.tsx  WrapperBarButton.tsx
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-02-20-235122_create_pastes/: down.sql  up.sql
migrations/2019-03-02-173641_add-html-language/: down.sql  up.sql
migrations/2019-03-02-174026_fix-html-mode-name/: down.sql  up.sql
migrations/2019-03-03-095403_add-deletion-date/: down.sql  up.sql
migrations/2019-03-04-074159_add-pgsql/: down.sql  up.sql
migrations/2019-03-06-150750_add-php/: down.sql  up.sql
migrations/2019-03-07-075501_add-is-markdown-flag/: up.sql
migrations/2019-03-08-081008_remove-revision-system/: down.sql  up.sql
migrations/2019-03-15-065751_nofollow-column/: down.sql  up.sql
migrations/2019-08-10-124655_allow-executing-python3-code/: down.sql  up.sql
migrations/2019-08-10-154536_add-shell-script/: down.sql  up.sql
migrations/2019-08-10-160609_execute-sqlite/: down.sql  up.sql
migrations/2019-08-11-085555_format-python3/: down.sql  up.sql
migrations/2019-08-11-104858_execute-rust/: down.sql  up.sql
migrations/2019-08-11-113651_add-perl6/: down.sql  up.sql
migrations/2019-08-14-093123_format-python3-with-black/: down.sql  up.sql
migrations/2019-08-14-100939_add-compiler-options-parameter/: down.sql  up.sql
migrations/2019-08-15-123406_identifiers/: down.sql  up.sql
migrations/2019-09-16-172252_implementations/: down.sql  up.sql
migrations/2019-09-19-100046_c/: down.sql  up.sql
migrations/2019-09-21-152245_remove-shared-wrappers/: down.sql  up.sql
migrations/2019-09-23-120726_delete-at-partial-index/: down.sql  up.sql
migrations/2019-10-09-094220_remove-codemirror-stuff/: down.sql  up.sql
migrations/2019-10-12-170323_perl/: down.sql  up.sql
src/: main.rs  migration.rs
src/models/: cors.rs  language.rs  (+2 more)
static/: style-v2.css
templates/: base.html.tera  config.html.tera  display-paste.html.tera  index.html.tera
(+40 files in other folders)
