# SPDX-FileCopyrightText: 2023 - 2024 Kamila Borowska <kamila@borowska.pw>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "pastebinrun"
version = "0.1.0"
authors = ["Kamila Borowska <kamila@borowska.pw>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
ammonia = "3.3.0"
chrono = { version = "0.4.33", default-features = false }
diesel = { version = "2.1.4", features = ["chrono"] }
diesel_migrations = "2.1.0"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
itertools = "0.12.1"
log = "0.4.20"
once_cell = "1.19.0"
prometheus = { version = "0.13.3", features = ["process"], default-features = false }
pulldown-cmark = { version = "0.9.6", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.5.1"

[build-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[features]
database_tests = []
sandbox_tests = []
